==========
04/05/2009
==========

- Bugfixes
- Implementacao de nova estrutura de exibicao do dashboard
- Inclusao de botao para maximizar ou minimizar o queue

HORAS TRABALHADAS: 8h

