@@ -5,8 +5,8 @@
 <script type="text/javascript" src="/jquery/jquery-1.3.2.min.js"></script>
 <?php B_Helper::style("application.css") ?>
 <?php B_Helper::script("application.js") ?>
-<?php $this->render('css', false) ?>
-<?php $this->render('js', false) ?>
+<?php $this->renderLayout('css', false) ?>
+<?php $this->renderLayout('js', false) ?>
 <?php $this->renderTemplate('css', false) ?>
 <?php $this->renderTemplate('js', false) ?>
 </head>
