@@ -1,0 +1,23 @@
+table th
+{
+    width: 100px;
+}
+
+#feedlistarea
+{
+    padding-top: 25px;
+}
+
+div.feeditem
+{
+    padding: 5px;
+    width: 500px;
+    border-bottom: 1px solid silver;
+    cursor: pointer;
+    cursor: hand;
+}
+
+div.feeditem:hover
+{
+    background-color: khaki;
+}
