@@ -66,12 +66,12 @@
 "blog/add","en_US","blog_username","Username"
 "blog/add","en_US","blog_password","Password"
 "blog/add","en_US","blog_login_check","check"
+"feed/index","en_US","feed_add","feed add"
+"feed/index","en_US","feed_add_url","URL"
+"feed/index","en_US","feed_not_found","feed not found"
+"feed/index","en_US","no_registered_feeds","no registered feeds"
 "dashboard/index","en_US","no_registered_blog","No registered <b>blog</b>"
 "dashboard/index","en_US","new_blog_instruction","to add a new blog, or use the item \"blogs\" in menu"
-"dashboard/index","en_US","feed_add","add"
-"dashboard/index","en_US","feed_add_form_title","Feed add"
-"dashboard/index","en_US","feed_add_url","URL"
-"dashboard/index","en_US","feed_not_found","Feed not found"
 "dashboard/index","en_US","view_feed_item","view"
 "dashboard/index","en_US","publish_queue_item","publish"
 "dashboard/index","en_US","edit_queue_item","edit"
