@@ -98,6 +98,7 @@ form h1
     text-decoration: underline;
     font-size: x-large;
     margin-bottom: 25px;
+    text-transform: capitalize;
 }
 form th
 {
