@@ -8,4 +8,11 @@
 
 HORAS TRABALHADAS: 8h
 
+==========
+06/05/2009
+==========
 
+- Alteração do layout para páginas internas
+- Listagem de feeds, cadastro e ordenacao atualizados para o novo layout
+
+HORAS TRABALHADAS: 4h
